--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 <body>
   <!-- الشريط العلوي -->
   <div class="navbar">
-    <a href="tel:‏‪0547579918‬‏" class="contact-icon">📞</a>
+    <a href="tel:‏‪0576530189‬‏" class="contact-icon">📞</a>
     <div class="title">مظلات وسواتر</div>
     <div class="menu" onclick="openSidebar()">☰</div>
   </div>
@@ -273,8 +273,8 @@
     <h1>أفضل أنواع المظلات والسواتر والهناجر والبواب وجميع انواع الحداده</h1>
     <p> متخصصون في تركيب جميع أنواع المظلات والسواتر بجودة عالية وأسعار تنافسية</p>
     <div class="contact-buttons">
-      <a href="tel:‏‪0547579918‬‏" class="contact-btn">📞 اتصل بنا</a>
-      <a href="https://wa.me/+966‏‪547579918‬‏" class="whatsapp-btn"> واتساب</a>
+      <a href="tel‏‪0576530189‬‏:‏‪‬‏" class="contact-btn">📞 اتصل بنا</a>
+      <a href="https://wa.me/+966‏‪576530189‬‏‬‏" class="whatsapp-btn"> واتساب</a>
     </div>
   </div>
 
@@ -392,8 +392,8 @@
   <!-- قسم الاتصال -->
   <div class="contact-section" id="contact">
     <h2>اتصل بنا مباشرة 📞</h2>
-    <a href="tel:‏‪0547579918‬‏" class="contact-button call">📞 اتصل الآن</a>
-    <a href="https://wa.me/+966‏‪547579918‬‏" class="contact-button whatsapp">واتساب</a>
+    <a href="tel:‏‪0576530189‬‏‬‏" class="contact-button call">📞 اتصل الآن</a>
+    <a href="https://wa.me/+966‏‪576530189‬‏‬‏" class="contact-button whatsapp">واتساب</a>
     <a href="abdrbuh14@gmail.com" class="contact-button email">📧 البريد الإلكتروني</a>
   </div>
 
