--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <h1>أفضل أنواع المظلات والسواتر والهناجر والبواب وجميع انواع الحداده</h1>
     <p> متخصصون في تركيب جميع أنواع المظلات والسواتر بجودة عالية وأسعار تنافسية</p>
     <div class="contact-buttons">
-      <a href="tel:‏‪0576530189‬‏" class="contact-icon">📞 اتصل بنا</a>
+     <a href="tel:0576530189‏‪‬‏" class="contact-btn">📞 اتصل بنا</a> 
       <a href="https://wa.me/+966‏‪576530189‬‏‬‏" class="whatsapp-btn"> واتساب</a>
     </div>
   </div>
