--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
   <!-- الهيدر -->
   <div class="header">
     <h1>أفضل أنواع المظلات والسواتر والهناجر والبواب وجميع انواع الحداده</h1>
-    <p> متخصصون في تركيب جميع أنواع المظلات والسواتر بجودة عالية وأسعار تنافسية</p>
+    <p> متخصصون في تركيب جميع أنواع المظلات والسواتر بجودة عالية وأسعار تنافسية رقم التواصل 0576530189</p>
     <div class="contact-buttons">
      <a href="tel:0576530189‏‪‬‏" class="contact-btn">📞 اتصل بنا</a> 
-      <a href="https://wa.me/+966‏‪576530189‬‏‬‏" class="whatsapp-btn"> واتساب</a>
+      <a href="‬‏‬‏https://wa.me/966576530189?text=%D9%85%D8%B1%D8%AD%D8%A8%D9%8B%D8%A7" class="whatsapp-btn"> واتساب</a>
     </div>
   </div>
 
@@ -393,7 +393,7 @@
   <div class="contact-section" id="contact">
     <h2>اتصل بنا مباشرة 📞</h2>
     <a href="tel:‏‪0576530189‬‏‬‏" class="contact-button call">📞 اتصل الآن</a>
-    <a href="https://wa.me/+966‏‪576530189‬‏‬‏" class="contact-button whatsapp">واتساب</a>
+    <a href="https://wa.me/966576530189?text=%D9%85%D8%B1%D8%AD%D8%A8%D9%8B%D8%A7‬‏‬‏" class="contact-button whatsapp">واتساب</a>
     <a href="abdrbuh14@gmail.com" class="contact-button email">📧 البريد الإلكتروني</a>
   </div>
 
