--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <p> متخصصون في تركيب جميع أنواع المظلات والسواتر بجودة عالية وأسعار تنافسية رقم التواصل 0576530189</p>
     <div class="contact-buttons">
      <a href="tel:0576530189‏‪‬‏" class="contact-btn">📞 اتصل بنا</a> 
-      <a href="https://wa.me/966576530189?text=%D9%85%D8%B1%D8%AD%D8%A8%D9%8B%D8%A7‬‏‬‏" class="whatsapp-btn"> واتساب</a>
+      <a href="https://wa.me/966576530189?text=%D9%85%D8%B1%D8%AD%D8%A8%D9%8B%D8%A7‬‏" class="whatsapp-btn"> واتساب</a>
     </div>
   </div>
 
