--- a/garden.html
+++ b/garden.html
@@ -82,9 +82,9 @@
 
     <!-- الشريط العلوي -->
     <div class="navbar">
-        <a href="tel:‏‪0547579918‬‏" class="contact-icon">📞</a>
+        <a href="tel:‏‪0576530189‬‏" class="contact-icon">📞</a>
         <div class="title">جلسات حدائق</div>
-        <a href="https://wa.me/+966‏‪547579918‬‏" class="whatsapp-icon">💬</a>
+        <a href="https://wa.me/966576530189?text=%D9%85%D8%B1%D8%AD%D8%A8%D9%8B%D8%A7" class="whatsapp-icon">💬</a>
     </div>
 
     <!-- معرض الجلسات -->
